--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
-  "name": "goldengoose",
+  "name": "takoyaki",
   "version": "1.0.0",
   "license": "MIT",
+  "scripts": {
+    "migrate:dev": "truffle migrate --network development --reset",
+    "migrate:testnet": "truffle migrate --network testnet --reset",
+    "migrate:bsc": "truffle migrate --network bsc --dry-run",
+    "compile": "truffle compile --network bscTestnet",
+    "encode": "ts-node ./scripts/encode.ts",
+    "test": "npx builder test",
+    "coverage": "npx builder coverage"
+  },
   "devDependencies": {
     "@openzeppelin/contracts": "^3.1.0",
     "@openzeppelin/contracts-upgradeable": "^3.4.0",
     "@openzeppelin/test-helpers": "^0.5.10",
     "@openzeppelin/truffle-upgrades": "^1.5.0",
+    "dotenv": "^8.2.0",
     "truffle-contract-size": "^2.0.1",
     "truffle-hdwallet-provider": "^1.0.17",
-    "truffle-plugin-verify": "^0.5.4",
-    "web3": "^1.3.0"
+    "truffle-plugin-verify": "^0.5.4"
   }
 }
